# FreeCameraFramework

./: .gitignore  CMakeLists.txt  FCFW_EventTest_Example.cpp  FCFW_PROJECT_CONTEXT.md  MappingRotationMatrixToBodyPartHeading.md  MappingRotationMatrixToBodyPartTorso.md  NEXUS_PAGE_DESCRIPTION.txt  README.md  TESTING_CPP_EVENTS.md  skyrimse.ppj  vcpkg.json
Documentation/: FCFW_DEVELOPER_REFERENCE.md  FCFW_PAPYRUS_REFERENCE.md
Documentation/PapyrusExample/: FCFW_EXAMPLE.esp
Documentation/TimelineFileExample/: FCFW_Timeline_orbitReference.yaml  FCFW_Timeline_trackReferenceAndReturn.yaml  FCFW_Timeline_worldPath.yaml  TIMELINE_FORMAT.md
include/: CameraPath.h  CameraTypes.h  ControlsManager.h  FCFW_API.h  FCFW_Utils.h  Hooks.h  ModAPI.h  PCH.h  Timeline.h  TimelineManager.h  TimelineTrack.h
scripts/: FCFW_EXAMPLE_PLAYERSCRIPT.pex  FCFW_EXAMPLE_QUESTSCRIPT.pex  FCFW_SKSEFunctions.pex
source/scripts/: FCFW_EXAMPLE_PLAYERSCRIPT.psc  FCFW_EXAMPLE_QUESTSCRIPT.psc  FCFW_SKSEFunctions.psc
src/: APIManager.cpp  CameraPath.cpp  ControlsManager.cpp  FCFW_Utils.cpp  Hooks.cpp  ModAPI.cpp  Timeline.cpp  TimelineManager.cpp  plugin.cpp
